--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,21 @@
         android:required="true" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProximityDetectionApp">
         <service
-            android:name=".StorageManagerService"
-            android:enabled="true"
-            android:exported="true"></service>
-        <service
-            android:name=".ScannerService"
+            android:name=".services.StorageManagerService"
             android:enabled="true"
             android:exported="true" />
         <service
-            android:name=".AdvertiserService"
+            android:name=".services.ScannerService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".services.AdvertiserService"
             android:enabled="true"
             android:exported="true" />
 
