--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProximityDetectionApp">
+
         <service
             android:name=".services.StorageManagerService"
             android:enabled="true"
             android:exported="true" />
+
         <service
             android:name=".services.ScannerService"
             android:enabled="true"
             android:exported="true" />
+
         <service
             android:name=".services.AdvertiserService"
             android:enabled="true"
@@ -37,10 +40,19 @@
             android:theme="@style/Theme.ProximityDetectionApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
